# SocialNetwork

./: .gitignore  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
alembic/: env.py  script.py.mako
alembic/versions/: 01279763056b_fix_frined_relationship.py  03a4c096a427_init.py  65175d5b5fa2_init.py
src/: config.py  database.py  main.py  model.py  models.py  repository.py
src/auth/: config.py  dependencies.py  exceptions.py  router.py  schema.py  service.py  util.py
src/auth/exception/: user.py
src/auth/schema/: response.py  user.py
src/auth/template/: confirm_email.html  forgot_password_form.html
src/email_celery/: celery_config.py  constant.py  router.py  util.py
src/schema/: base.py
src/user/: alembic.ini  config.py  database.py  main.py  repository.py  repositry.py  router.py  schema.py  service.py  web.py
src/user/auth/service/: user.py
src/user/migrations/: env.py
src/user/migrations/versions/: 3b3cd222df5f_init.py  d715b47d69c0_initial.py
src/user/test/unit/user/: test_repository.py  user_test.py
src/user/user/: domain_model.py  error.py  model.py  schema.py
src/user/user/service/: user.py
test/: orm_test.py
test/unit/user/: user_test.py
