[project]
name = "socialnetwork"
version = "0.1.0"
description = "Backend for socialnetwork"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.114.0",
    "asyncpg>=0.29.0",
    "python-dotenv>=1.0.1",
    "email-validator>=2.1.2",
    "uvicorn>=0.30.6",
    "fastapi-users[sqlalchemy]>=13.0.0",
]

[tool.uv]
dev-dependencies = [
    "alembic>=1.13.2",
    "pytest>=8.3.2",
]

[project.scripts]
main = "src:main:"

[tool.ruff]
# Set the maximum line length to 79.
line-length = 79

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]